# srtd

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  fourmolu.yaml  justfile  safe_run.sh  srtd-hs.cabal
app/: Alignment.hs  AppAttr.hs  AppMsg.hs  Attr.hs  CmdlineArgs.hs  Component.hs  Config.hs  Keymap.hs  Log.hs  Main.hs  Model.hs  ModelJSON.hs  ModelSaver.hs  ModelServer.hs  Todo.hs
app/Components/: Attr.hs  MainTree.hs  NewNodeOverlay.hs  TestOverlay.hs
cabal-helper/: Main.hs
docs/: actionability.md  architecture.md  quick-add-inbox-plan.md  refile-plan.md
experiments/: ProactiveBandana0.hs  ProactiveBandana2.hs
lib/Srtd/: Alignment.hs  AppAttr.hs  AppTheme.hs  Attr.hs  BananaComponent.hs  BrickAttrHelpers.hs  BrickHelpers.hs  BrickListHelpers.hs  CmdlineArgs.hs  Component.hs  Config.hs  Dates.hs  IdTree.hs  Keymap.hs  Log.hs  Main.hs  Model.hs  ModelJSON.hs  ModelSaver.hs  ModelServer.hs  MonadBrick.hs  ProactiveBandana.hs  Query.hs  Ticker.hs  Todo.hs  Util.hs
lib/Srtd/Attr/: TH.hs  Types.hs
lib/Srtd/Components/: Attr.hs  ClipboardIndicator.hs  CompilingTextEntry.hs  CompilingTextEntryBanana.hs  DateSelectOverlay.hs  DetailsViewOverlay.hs  EditorBanana.hs  EditorProactive.hs  MainTree.hs  ModelStatusIndicator.hs  NewNodeOverlay.hs  QuickFilter.hs  RegexSearchEntryOverlay.hs  Tabs.hs  TestOverlay.hs  TreeStatusBar.hs  TreeView.hs
lib/Srtd/Data/: IdTree.hs  MapLike.hs  TreeZipper.hs
lib/Srtd/Util/: ListZipper.hs
test/: Main.hs  MainTest.hs
test/Test/: DateTests.hs  ModelClipboardTests.hs  ModelMoveTests.hs  QueryTests.hs  Support.hs  TreeTests.hs
themes/: catppuccin_dark.toml  catppuccin_light.toml  flexoki_light.toml
