cabal-version:   3.4
name:            srtd
version:         0.1.0.0
maintainer:      steffen.schuldenzucker@gmail.com
author:          Steffen Schuldenzucker
synopsis:        A todo app for humans
build-type:      Simple
extra-doc-files: CHANGELOG.md

library
    exposed-modules:
        Srtd.Alignment
        Srtd.AppAttr
        Srtd.AppTheme
        Srtd.Attr
        Srtd.Attr.TH
        Srtd.Attr.Types
        Srtd.BrickAttrHelpers
        Srtd.BrickHelpers
        Srtd.BrickListHelpers
        Srtd.CmdlineArgs
        Srtd.Component
        Srtd.Components.Attr
        Srtd.Components.CompilingTextEntry
        Srtd.Components.DateSelectOverlay
        Srtd.Components.EditorProactive
        Srtd.Components.MainTree
        Srtd.Components.NewNodeOverlay
        Srtd.Components.TestOverlay
        Srtd.Components.TreeView
        Srtd.Config
        Srtd.Data.IdTree
        Srtd.Data.MapLike
        Srtd.Data.TreeZipper
        Srtd.Dates
        Srtd.Keymap
        Srtd.Log
        Srtd.Main
        Srtd.Model
        Srtd.ModelJSON
        Srtd.ModelSaver
        Srtd.ModelServer
        Srtd.MonadBrick
        Srtd.ProactiveBandana
        Srtd.Query
        Srtd.Ticker
        Srtd.Todo
        Srtd.Util

    hs-source-dirs:     lib
    default-language:   GHC2024
    default-extensions:
        OverloadedStrings ImplicitParams TemplateHaskell DeriveGeneric
        LambdaCase NumericUnderscores TypeFamilies ViewPatterns PatternSynonyms

    ghc-options:
        -Wall -Werror=missing-methods -Werror=missing-fields
        -Werror=incomplete-patterns -threaded -Wall -Wcompat
        -fwrite-ide-info

    build-depends:
        microlens-mtl ^>=0.2.1.0,
        base >=4.17.2.1 && <4.22,
        brick >=2.4 && <2.10,
        vty >=6.2 && <6.5,
        mtl ^>=2.3,
        hslogger ^>=1.3.1,
        stm ^>=2.5.3,
        uuid ^>=1.3,
        containers >=0.7 && <0.9,
        random >=1.2 && <1.4,
        vector ^>=0.13,
        microlens-platform >=0.4,
        aeson ^>=2.2.3,
        text ^>=2.1.1,
        aeson-pretty ^>=0.8.10,
        bytestring >=0.11.5.3 && <0.13,
        optparse-applicative >=0.18.1.0 && <0.20,
        toml-parser ^>=2.0.1.0,
        directory ^>=1.3.7.1,
        filepath >=1.4.2.2 && <1.6,
        data-clist ^>=0.2,
        rosezipper ^>=0.2,
        regex-tdfa ^>=1.3.2,
        process ^>=1.6.18,
        ListZipper ^>=1.2.0.2,
        Hclip ^>=3.0.0.4,
        time >=1.12 && <1.15,
        megaparsec >=9.6.1 && <9.8,
        parser-combinators ^>=1.3,
        word-wrap ^>=0.5,
        semigroupoids ^>=6.0.1,
        safe ^>=0.3.21,
        composition ^>=1.0.2.2,
        text-zipper ^>=0.13,
        template-haskell >=2.19 && <2.24,
        async ^>=2.2.5,
        clock ^>=0.8.4,
        transformers ^>=0.6,
        enummapset ^>=0.7,
        array ^>=0.5.8,
        pqueue ^>=1.6

executable srtd
    main-is:          Main.hs
    hs-source-dirs:   app
    default-language: GHC2024
    ghc-options:      -threaded -Wall -Wcompat
    build-depends:
        base >=4.17.2.1 && <4.22,
        srtd

executable cabal-helper
    main-is:          Main.hs
    hs-source-dirs:   cabal-helper
    default-language: GHC2024
    ghc-options:      -Wall -Wcompat
    build-depends:
        base >=4.17.2.1 && <4.22,
        mtl ^>=2.3,
        optparse-applicative >=0.18.1.0 && <0.20,
        Cabal-syntax ^>=3.16,
        directory ^>=1.3,
        bytestring >=0.11.5.3 && <0.13,
        microlens ^>=0.4.13

test-suite srtd-test
    type:               exitcode-stdio-1.0
    main-is:            Main.hs
    hs-source-dirs:     test
    default-language:   GHC2024
    default-extensions: OverloadedStrings
    build-depends:
        base >=4.17.2.1 && <4.22,
        containers >=0.7 && <0.9,
        srtd,
        text ^>=2.1.1,
        time >=1.12 && <1.15,
        megaparsec >=9.6.1 && <9.8,
        tasty ^>=1.5,
        tasty-hunit ^>=0.10.2,
        regex-tdfa ^>=1.3.2
